--- a/ProductProgamming04042025/Pages/Dashboard.cshtml
+++ b/ProductProgamming04042025/Pages/Dashboard.cshtml
@@ -1,5 +1,5 @@
 ﻿@page
-@model IndexModel
+@model ProductProgamming04042025.Pages.DashboardModel
 @{
 }
 
@@ -47,7 +47,7 @@
                     </div>
                 </div>
                 <div id="shell-navigation">
-                    <a asp-page="/Dashboard" class="nav-item">
+                    <a asp-page="/Dashboard" class="nav-item selected">
                         <div class="content">
                             <div class="icon">
                                 <img src="~/images/calendar.svg" alt="">
@@ -57,7 +57,7 @@
                             </span>
                         </div>
                     </a>
-                    <a asp-page="/Dashboard" class="nav-item selected">
+                    <a asp-page="/Index" class="nav-item">
                         <div class="content">
                             <div class="icon">
                                 <img src="~/images/chart.svg" alt="">
