--- a/ProductProgamming04042025/Pages/EmailConfirm.cshtml
+++ b/ProductProgamming04042025/Pages/EmailConfirm.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
 @model ProductProgamming04042025.Pages.EmailConfirmModel
 @{
+    ViewData["Title"] = "Подтверждение email";
 }
 
 
@@ -11,7 +12,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/email-confirm.css">
     <link rel="stylesheet" href="~/css/toast.css">
-    <title>Document</title>
+    <title>@ViewData["Title"]</title>
 </head>
 <body>
     <main>
@@ -31,7 +32,7 @@
                         </div>
                         <div class="info-text">
                             Мы выслали вам ссылку для подтверждения <br>
-                            на адрес <span class="bold-text">igor.shadrof@mail.ru</span>
+                            на адрес <span class="bold-text">@Model.Email</span>
                         </div>
                     </div>
                 </div>
