--- a/ProductProgamming04042025/Pages/Registration.cshtml
+++ b/ProductProgamming04042025/Pages/Registration.cshtml
@@ -1,6 +1,7 @@
 ﻿@page
-@model RegistrationModel
+@model Registration
 @{
+    ViewData["Title"] = "Регистрация";
 }
 
 <!DOCTYPE html>
@@ -10,7 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/registration.css">
     <link rel="stylesheet" href="~/css/toast.css">
-    <title>Document</title>
+    <title>@ViewData["Title"]</title>
 </head>
 <body>
     <main>
@@ -18,55 +19,68 @@
             <div id="logo">
                 <h1>ServiceName</h1>
             </div>
-            <form id="form" action="">
+            <form id="form" method="post">
+                <div asp-validation-summary="ModelOnly" class="text-danger"></div>
+
                 <div class="split-fields">
                     <label class="input">
                         <span>Фамилия</span>
-                        <input type="text" name="firstname" placeholder="Введите свою фамилию" autocomplete="off" required>
+                        <input type="text" asp-for="Input.LastName" placeholder="Введите свою фамилию" autocomplete="off" required>
+
+                        <span asp-validation-for="Input.LastName" class="text-danger"></span>
                     </label>
                     <label class="input">
                         <span>Имя</span>
-                        <input type="text" name="lastname" placeholder="Введите своё имя" autocomplete="off" required>
+                        <input type="text" asp-for="Input.FirstName" placeholder="Введите своё имя" autocomplete="off" required>
+
+                        <span asp-validation-for="Input.FirstName" class="text-danger"></span>
                     </label>
                 </div>
                 <label class="input">
                     <span>
                         Логин
                     </span>
-                    <input type="text" name="login" placeholder="Придумайте логин" autocomplete="off" required>
+                    <input type="text" asp-for="Input.Login" placeholder="Придумайте логин" autocomplete="off" required>
+                    
+                    <span asp-validation-for="Input.Login" class="text-danger"></span>
                 </label>
                 <label class="input">
                     <span>
                         Почта
                     </span>
-                    <input type="email" name="email" placeholder="Введите адрес своей электронной почты" autocomplete="off" required>
+                    <input type="email" asp-for="Input.Email" placeholder="Введите адрес своей электронной почты" autocomplete="off" required>
+
+                    <span asp-validation-for="Input.Email" class="text-danger"></span>
                 </label>
                 <label class="input">
                     <span>
                         Пароль
                     </span>
-                    <input type="password" name="password" placeholder="Придумайте пароль" autocomplete="off" required>
+                    <input type="password" asp-for="Input.Password" placeholder="Придумайте пароль" autocomplete="off" required>
+
+                    <span asp-validation-for="Input.Password" class="text-danger"></span>
                 </label>
                 <label class="input">
                     <span>
                         Подтвердите пароль
                     </span>
-                    <input type="password" name="password-confirm" placeholder="Введите пароль ещё раз" autocomplete="off" required>
+                    <input type="password" asp-for="Input.ConfirmPassword" placeholder="Введите пароль ещё раз" autocomplete="off" required>
+
+                    <span asp-validation-for="Input.ConfirmPassword" class="text-danger"></span>
                 </label>
                 <div class="form-footer">
-                    <label for="privacy" class="input-checkbox">
-                        <input type="checkbox" name="privacy" id="privacy" hidden>
-                        <label for="privacy" class="checkbox">
-
-                        </label>
+                    <label class="input-checkbox">
+                        <input type="checkbox" asp-for="Input.PrivacyAgreement" required hidden>
+                        <span class="checkbox"></span>
                         <div class="text">
                             <div>
                                 Я соглашаюсь с <a asp-page="/Confidence">Политикой конфиденциальности</a>
                             </div>
                         </div>
+                        <span asp-validation-for="Input.PrivacyAgreement" class="text-danger"></span>
                     </label>
                     <button type="submit">Зарегистрироваться</button>
-                    <a asp-page"="/Login">Есть аккаунт? Войдите!</a>
+                    <a asp-page="/Login">Есть аккаунт? Войдите!</a>
                 </div>
             </form>
         </section>
@@ -74,5 +88,9 @@
     
     <script src="~/js/toast.js"></script>
     <script src="~/js/login.js"></script>
+
+    @section Scripts {
+        <partial name="_ValidationScriptsPartial" />
+    }
 </body>
 </html>
