--- a/ProductProgamming04042025/wwwroot/css/shell.css
+++ b/ProductProgamming04042025/wwwroot/css/shell.css
@@ -16,6 +16,7 @@ body {
 }
 
 body>main {
+    position: absolute;
     background-color: var(--blue);
 }
 
@@ -160,11 +161,18 @@ body>main {
 }
 
 #content {
-    height: 400vh;
+    min-height: 100vh;
     background-color: var(--light-blue);
 }
 
+#content>.data>.title{
+    font-size: 36px;
+}
+
 @media (max-width: 767px) {
+    #content{
+        padding: 30px;
+    }
     .mobile {
         display: block;
     }
@@ -194,7 +202,6 @@ body>main {
 
     body>main {
         width: 100%;
-        height: 100%;
     }
 
     #menu {
@@ -264,12 +271,12 @@ body>main {
         position: sticky;
     }
     #menu{
-        min-width: 260px;
+        min-width: 320px;
         background-color: transparent;
     }
 
     #content{
-        padding: 45px 47px;
+        padding: 65px 67px;
         width: 100%;
         border-top-left-radius: 30px;
         -webkit-box-shadow: -4px 0px 15px 0px rgba(0, 0, 0, 0.1);
