Добавил политику конфиденциальности

--- a/ProductProgamming04042025/Pages/Registration.cshtml
+++ b/ProductProgamming04042025/Pages/Registration.cshtml
@@ -74,7 +74,7 @@
                         <span class="checkbox"></span>
                         <div class="text">
                             <div>
-                                Я соглашаюсь с <a asp-page="/Confidence">Политикой конфиденциальности</a>
+                                Я соглашаюсь с <a href="/Confidence" target="_blank">Политикой конфиденциальности</a>
                             </div>
                         </div>
                         <span asp-validation-for="Input.PrivacyAgreement" class="text-danger"></span>
