поменял имя на FitAI

--- a/ProductProgamming04042025/Pages/EmailConfirm.cshtml
+++ b/ProductProgamming04042025/Pages/EmailConfirm.cshtml
@@ -18,7 +18,7 @@
     <main>
         <section id="content">
             <div id="logo">
-                <h1>ServiceName</h1>
+                <h1>FitAI</h1>
             </div>
             <div id="info">
                 <div class="content">
