--- a/ProductProgamming04042025/Pages/PasswordRecoveryStart.cshtml
+++ b/ProductProgamming04042025/Pages/PasswordRecoveryStart.cshtml
@@ -17,7 +17,7 @@
     <main>
         <section id="content">
             <div id="logo">
-                <h1>ServiceName</h1>
+                <h1>FitAI</h1>
             </div>
             <form id="form" action="/EmailConfirmPasswordRecovery">
                 <label class="input">
