--- a/ProductProgamming04042025/Pages/Registration.cshtml
+++ b/ProductProgamming04042025/Pages/Registration.cshtml
@@ -17,7 +17,7 @@
     <main>
         <section id="content">
             <div id="logo">
-                <h1>ServiceName</h1>
+                <h1>FitAI</h1>
             </div>
             <form id="form" method="post">
                 <div asp-validation-summary="ModelOnly" class="text-danger"></div>
