--- a/ProductProgamming04042025/wwwroot/css/root.css
+++ b/ProductProgamming04042025/wwwroot/css/root.css
@@ -66,6 +66,10 @@ label.input>input {
     box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.25);
 }
 
+label.input>.text-danger{
+    margin-top: 10px;
+}
+label.input>input.input-validation-error,
 label.input>input.error {
     background-color: #E7DEDE;
     -webkit-box-shadow: 0px 0px 10px 0px rgba(255, 0, 0, 0.25);
