Добавлена страница настроек

--- a/ProductProgamming04042025/Pages/Index.cshtml
+++ b/ProductProgamming04042025/Pages/Index.cshtml
@@ -23,7 +23,7 @@
                         <img src="./images/burger.svg" alt="">
                     </div>
                     <span class="title">
-                        Чат
+                        План тренеровок
                     </span>
                 </div>
             </div>
@@ -38,7 +38,7 @@
                                 <span class="status">Пользователь</span>
                                 <span class="name">@await UserManager.GetUserNameAsync(await UserManager.GetUserAsync(User))</span>
                             </div>
-                            <div class="config"><a href="~/Config" class="gear">
+                            <div class="config"><a href="~/Settings" class="gear">
                                     <img src="./images/gear.svg" alt="C">
                                 </a></div>
                         </div>
