--- a/ProductProgamming04042025/Pages/Chat.cshtml
+++ b/ProductProgamming04042025/Pages/Chat.cshtml
@@ -54,7 +54,7 @@
                             </span>
                         </div>
                     </a>
-                    <a asp-page="/Plan" class="nav-item">
+                    <a asp-page="/Index" class="nav-item">
                         <div class="content">
                             <div class="icon">
                                 <img src="~/images/dumbbells.svg" alt="">
