--- a/ProductProgamming04042025/Pages/Chat.cshtml
+++ b/ProductProgamming04042025/Pages/Chat.cshtml
@@ -36,7 +36,7 @@
                                 <span class="name">@Model.UserProfile.FirstName @Model.UserProfile.LastName</span>
                             </div>
                             <div class="config">
-                                <a href="~/config" class="gear">
+                                <a asp-page="/Settings" class="gear">
                                     <img src="~/images/gear.svg" alt="C">
                                 </a>
                             </div>
