--- a/ProductProgamming04042025/Pages/Registration.cshtml
+++ b/ProductProgamming04042025/Pages/Registration.cshtml
@@ -11,6 +11,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/registration.css">
     <link rel="stylesheet" href="~/css/toast.css">
+    <script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
     <title>@ViewData["Title"]</title>
 </head>
 <body>
@@ -82,6 +83,8 @@
                     <button type="submit">Зарегистрироваться</button>
                     <a asp-page="/Login">Есть аккаунт? Войдите!</a>
                 </div>
+                <script src="~/js/YandexID_main.js">
+                </script>
             </form>
         </section>
     </main>
