--- a/ProductProgamming04042025/Pages/Login.cshtml
+++ b/ProductProgamming04042025/Pages/Login.cshtml
@@ -5,13 +5,16 @@
 
 <!DOCTYPE html>
 <html lang="ru">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="~/css/auth.css">
     <link rel="stylesheet" href="~/css/toast.css">
-    <title>Document</title>
+    <script src="https://yastatic.net/s3/passport-sdk/autofill/v1/sdk-suggest-with-polyfills-latest.js"></script>
+    <title>Логин</title>
 </head>
+
 <body>
     <main>
         <section id="content">
@@ -21,23 +24,28 @@
             <form id="form" method="post">
                 <label class="input">
                     <span>Логин</span>
-                    <input asp-for="Input.Login" type="text" name="login" id="login" placeholder="Введите логин" autocomplete="off" required>
+                    <input asp-for="Input.Login" type="text" name="login" id="login" placeholder="Введите логин"
+                        autocomplete="off" required>
                 </label>
                 <label class="input">
                     <span>
                         <span>Пароль</span>
                         <a asp-page="/PasswordRecoveryStart">Забыли пароль?</a>
                     </span>
-                    <input asp-for="Input.Password" type="password" name="password" id="password" placeholder="Введите логин" autocomplete="off" required>
+                    <input asp-for="Input.Password" type="password" name="password" id="password"
+                        placeholder="Введите логин" autocomplete="off" required>
                 </label>
                 <div class="form-footer">
                     <button type="submit">Войти</button>
                     <a asp-page="/Registration">Нет аккаунта? Зарегистрируйтесь!</a>
                 </div>
+                <script src="~/js/YandexID_main.js">
+                </script>
             </form>
         </section>
     </main>
     <script src="~/js/toast.js"></script>
     @* <script src="~/js/login.js"></script> *@
 </body>
+
 </html>
