--- a/ProductProgamming04042025/Pages/FirstLogin.cshtml
+++ b/ProductProgamming04042025/Pages/FirstLogin.cshtml
@@ -39,9 +39,9 @@
                 </div>
                 <label class="input">
                     <span>
-                        Укажите цель тренеровок
+                        Укажите цель тренировок
                     </span>
-                    <input type="text" asp-for="FitnessGoal" name="text" id="text" placeholder="Чего вы хотите достичь?" autocomplete="off"
+                    <input type="text" asp-for="NewFields.FitnessGoal" id="text" placeholder="Чего вы хотите достичь?" autocomplete="off"
                            required>
                 </label>
                 <label class="input">
